ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-demo-k8s
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: spring-demo-service
              port:
                number: 8080
